<RelativeLayout android:id="@+id/SPACE"
    android:layout_width="85dp"
    android:layout_height="65dp"
    android:layout_marginTop="3dp"
    android:background="@drawable/seat_ap"
    android:orientation="vertical"
    android:paddingBottom="6dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="3dp"
    android:visibility="visible"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/ImageView_SM"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true" />
    <RelativeLayout
        android:id="@+id/seat_PCNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">
        <TextView
            android:id="@+id/textView_PCNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pcnum"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/seat_AP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="선불"
                android:textColor="@color/seat_ap"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/textView_RT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="03:50"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/pcuse_remain"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout><!--선불-->
        <RelativeLayout
            android:id="@+id/seat_DP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:text="후불"
                android:textSize="13sp"
                android:textColor="@color/seat_dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true">
                <TextView
                    android:id="@+id/textView_ST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14:00"
                    android:textSize="12sp"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/pcuse_start"
                    android:textSize="12sp"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </RelativeLayout><!--후불-->

    </RelativeLayout><!--공간 정보-->
</RelativeLayout><!--051-->